@@ -1,3 +1,8 @@
+Mon, 01 May 2006 21:28:24 +0200 <thp@perli.net>
+	* Applied patch from Adrien Beaucreux <informancer at web.de>
+	  to support "update on startup" option (updates feed cache)
+	  (fixes bug #7346)
+
 Fri, 14 Apr 2006 14:40:47 +0200 <thp@perli.net>
 	* Commented-out the "eject" call on end of iPod sync for now
 	* Fallback to default download dir if not able to create it
